[gd_scene load_steps=3 format=3 uid="uid://bqm8l5d55xqiu"]

[ext_resource type="Script" uid="uid://d12hm3cmeutcs" path="res://settings.gd" id="1_x2hje"]
[ext_resource type="Texture2D" uid="uid://d36br21h5w6tv" path="res://onscreen_controls/flat_dark/close.png" id="2_nkug2"]

[node name="settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x2hje")

[node name="players_slider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -93.0
offset_right = 150.0
offset_bottom = -43.0
grow_horizontal = 2
grow_vertical = 2
min_value = 1.0
max_value = 4.0
value = 1.0
exp_edit = true
rounded = true

[node name="debug" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 683.0
offset_top = 384.0
offset_right = 731.0
offset_bottom = 432.0
text = "режим отладки"
alignment = 1

[node name="exit" type="TextureButton" parent="."]
offset_left = 683.0
offset_top = 452.0
offset_right = 731.0
offset_bottom = 500.0
texture_normal = ExtResource("2_nkug2")

[node name="players_label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -115.0
offset_right = 37.0
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 2
text = "игроков:"

[connection signal="drag_ended" from="players_slider" to="." method="_players_changed"]
[connection signal="pressed" from="debug" to="." method="_on_debug_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
